# Scripts

./: .gitignore  50-synaptics.conf  70-synaptics.conf  README.md  bashrc  benchmark.sh  bitTest.cpp  desktop_i3_config  desktop_i3status_config.conf  gf  gfconf  gfignore  i3config_example  init.el  netstatwatch  pj  spacemacs  test_configs.sh  vimrc  vol
CUDA_TVOTS/: DesignSpecification.docx  SingleHashAndFInd  check.txt  main.cpp  makefile  sha1.cu  supplement.cu  supplement.h  tests.cpp  tvots_gs_packets.pcapng  tvots_packet_handler.cpp
alacritty/: alacritty.yml  mac_alacritty.yml
conf/: compton.conf
emacs/: init.el  spacemacs
git/: .gitconfig
haskell_gf/: CHANGELOG.md  haskell-gf.cabal
haskell_gf/app/: Config.hs  Main.hs  Search.hs
i3/: config_deb  i3_laptop_config  i3config_example  i3status.conf  i3status.conf_desktop
rust_gf/: Cargo.toml
synaptics/: 30-touchpad.conf
t/: 00-load.t  01-help-system.t  02-error-handling.t  03-integration-help.t  04-streaming-processor.t  05-pattern-matching-optimization.t  06-directory-traversal-optimization.t  07-early-validation-pipeline.t  08-cli-compatibility.t  09-config-compatibility.t  10-context-compatibility.t  11-regression-tests.t  12-performance-benchmarks.t  13-integration-optimization.t  14-context-flag-testing.t  15-context-flag-current-behavior.t  16-context-flag-comprehensive.t  17-display-match-with-context.t  18-context-eof-scenarios.t  19-overlapping-context.t  20-memory-management-performance.t  21-backward-compatibility-regression.t  22-context-integration-tests.t  README.md  run_tests.pl  (+4 more)
(+28 files in other folders)
